<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <LinearLayout
        android:background="@drawable/shape_boderbottomlist"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/LinearListIcon"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">

        <!--Icon Notices-->
        <ImageView
            android:contentDescription="@string/icon_notices"
            android:src="@drawable/newspaper_b"
            android:onClick="menuIconRedirect"
            android:layout_height="40sp"
            android:layout_width="40sp"
            android:id="@+id/iconNews"
            android:layout_weight="1"
            android:padding="7sp"/>

        <!--Icon Talk with us-->
        <ImageView
            android:contentDescription="@string/icon_talkUs"
            android:onClick="menuIconRedirect"
            android:src="@drawable/speaker_b"
            android:id="@+id/iconTalkUs"
            android:layout_height="40sp"
            android:layout_width="40sp"
            android:layout_weight="1"
            android:padding="7sp"/>

        <!--Icon Ride-->
        <ImageView
            android:contentDescription="@string/icon_ride"
            android:onClick="menuIconRedirect"
            android:src="@drawable/car_b"
            android:layout_height="40sp"
            android:layout_width="40sp"
            android:id="@+id/iconRide"
            android:visibility="gone"
            android:layout_weight="1"
            android:padding="10.1sp"/>

        <!--Icon Account-->
        <ImageView
            android:contentDescription="@string/icon_account"
            android:onClick="menuIconRedirect"
            android:src="@drawable/account_b"
            android:id="@+id/iconAccount"
            android:layout_height="40sp"
            android:layout_width="40sp"
            android:layout_weight="1"
            android:padding="8sp"/>
    </LinearLayout>
</RelativeLayout>