<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/defaultBackgroud"
    android:id="@+id/mainRideResponsibleLayout"
    tools:context=".fragments.ride_responsible"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:focusable="true">

    <!--Gif de carregamento-->
    <ImageView
        android:contentDescription="@string/load_description"
        android:id="@+id/imageLoadRide"
        android:layout_marginTop="10sp"
        android:layout_gravity="center"
        android:src="@drawable/load4"
        android:layout_height="30sp"
        android:layout_width="30sp"/>

    <!--Layout Content-->
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/LayoutContent"
        android:visibility="invisible"
        android:orientation="vertical">

        <!--Layout Detalhes do carro-->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/carDetailsLayout"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="8dp">

            <!--Label Detalhes do carro-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_marginLeft="8dp"
                android:textStyle="bold"
                android:textSize="25sp"
                android:text="@string/car_datails_label"
                android:layout_marginStart="8dp" />

            <!--EditText Marca-->
            <android.support.design.widget.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/widgetCarMark"
                android:layout_marginTop="10sp"
                app:errorEnabled="true">

                <EditText
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:layout_width="match_parent"
                    android:hint="@string/mark_hint"
                    android:layout_marginTop="16sp"
                    android:id="@+id/EditCarMark"
                    android:textSize="16sp"/>

            </android.support.design.widget.TextInputLayout>

            <!--EditText Modelo-->
            <android.support.design.widget.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/widgetCarModel"
                app:errorEnabled="true">

                <EditText
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:layout_width="match_parent"
                    android:hint="@string/model_hint"
                    android:id="@+id/EditCarModel"
                    android:textSize="16sp"/>

            </android.support.design.widget.TextInputLayout>

            <!--EditText Cor-->
            <android.support.design.widget.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/widgetCarColor"
                app:errorEnabled="true">

                <EditText
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:layout_width="match_parent"
                    android:hint="@string/color_hint"
                    android:id="@+id/EditCarColor"
                    android:textSize="16sp"/>

            </android.support.design.widget.TextInputLayout>

            <!--EditText Placa-->
            <android.support.design.widget.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/widgetCarPlate"
                app:errorEnabled="true">

                <EditText
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:layout_width="match_parent"
                    android:hint="@string/plate_hint"
                    android:id="@+id/EditCarPlate"
                    android:textSize="16sp"/>

            </android.support.design.widget.TextInputLayout>

            <!--EditText Vagas-->
            <android.support.design.widget.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/widgetCarVacancies"
                app:errorEnabled="true">

                <EditText
                    android:hint="@string/vacancies_hint"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/EditCarVacancies"
                    android:inputType="number"
                    android:textSize="16sp"
                    android:ems="1"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <!--Main Layout Rotas-->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            tools:ignore="RtlSymmetry"
            android:paddingRight="8dp"
            android:paddingStart="8dp"
            android:paddingTop="20sp"
            android:paddingLeft="8dp"
            android:paddingEnd="8dp">

            <!--Label Rota-->
            <TextView
                android:textColor="@color/colorPrimary"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/labelRouteTitle"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/route"
                android:textStyle="bold"
                android:textSize="25sp"/>

            <!--Descricao da secao-->
            <TextView
                android:text="@string/route_section_description"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/descriptionRoute"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:textStyle="bold"
                android:textSize="15sp"/>

            <!--Content Layout Rotas-->
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:id="@+id/LayoutRoute">
            </LinearLayout>

            <!--Layout add one more route-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--Image add route-->
                <ImageView
                    android:contentDescription="@string/add_item_description"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/imgButtonAddRoute"
                    android:src="@mipmap/add_item"/>

            </RelativeLayout>

        </LinearLayout>

        <!--Layout Salvar-->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:paddingTop="20sp">

            <!--Botao salvar-->
            <Button
                android:background="@drawable/shape_orangebuttom"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginBottom="15sp"
                android:textColor="@color/white"
                android:layout_marginTop="16sp"
                android:id="@+id/btnSaveRoute"
                android:layout_width="200dp"
                android:text="@string/save"
                android:textStyle="bold"
                android:gravity="center"/>

        </RelativeLayout>

        <!--Delete car-->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="20sp"
            android:background="@color/white"
            android:id="@+id/layoutDeleteCar"
            android:orientation="horizontal"
            android:layout_marginTop="20sp"
            android:paddingBottom="10sp"
            tools:ignore="RtlSymmetry"
            android:paddingStart="8sp"
            android:paddingLeft="8sp"
            android:paddingTop="10sp">

            <ImageView
                android:contentDescription="@string/logoff_description"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/delete_icon"
                android:layout_height="30sp"
                android:layout_width="30sp"/>

            <TextView
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/delete_car"
                android:layout_marginStart="5sp"
                android:layout_marginLeft="5sp"
                android:textSize="20sp"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>