<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context="com.example.android.meinforme.views.login"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/defaultBackgroud"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:id="@+id/mainLoginLayout"
    android:paddingRight="16sp"
    android:paddingLeft="16sp"
    android:focusable="true">

    <!--Main content Layout-->
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <!--Logo MEINFORME-->
        <ImageView
            android:contentDescription="@string/logo_description"
            android:src="@drawable/logo_me_informe"
            android:layout_height="125sp"
            android:paddingRight="20sp"
            android:paddingLeft="20sp"
            android:layout_width="match_parent"
            android:layout_marginBottom="20sp"/>

        <!--EditText e-mail-->
        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/widgetEmailUser"
            app:errorEnabled="true">

            <EditText
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/email_hint"
                android:layout_marginTop="5sp"
                android:id="@+id/emailUser"
                android:textSize="16sp"/>

        </android.support.design.widget.TextInputLayout>

        <!--EditText senha-->
        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/widgetPassUser"
            app:errorEnabled="true">

            <EditText
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:hint="@string/pass_hint"
                android:id="@+id/passwordUser"
                android:layout_marginTop="5sp"
                android:textSize="16sp"/>
        </android.support.design.widget.TextInputLayout>

        <!--Button confirm-->
        <Button
            android:background="@drawable/shape_orangebuttom"
            android:text="@string/button_continue_text"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="16sp"
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:id="@+id/loginUser"
            android:textStyle="bold"
            android:gravity="center"/>

        <!--Footer Layout-->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="32sp">

            <!--Link forgot your password?-->
            <TextView
                android:text="@string/forgot_password_text"
                android:textColor="@color/smoothGreyColor"
                android:onClick="footerLabelRedirect"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/forgotPassword"
                android:layout_marginTop="8sp"
                android:textStyle="bold"
                android:textSize="15sp"
                android:gravity="end"/>

            <!--Link register-->
            <TextView
                android:textColor="@color/smoothGreyColor"
                android:onClick="footerLabelRedirect"
                android:layout_height="wrap_content"
                android:text="@string/register_text"
                android:layout_width="wrap_content"
                android:id="@+id/registerUser"
                android:layout_marginTop="8sp"
                android:visibility="invisible"
                android:clickable="false"
                android:textStyle="bold"
                android:gravity="start"
                android:textSize="15sp"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
