<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    tools:context="com.example.android.meinforme.views.recover_pass"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/defaultBackgroud"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/mainRecoverLayout"
    android:focusableInTouchMode="true"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:focusable="true">

    <!--Texto que fica no topo-->
    <TextView
        android:textColor="@color/smoothGreyColor"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/recover_pass"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:textSize="15sp"/>

    <!--Layout Content-->
    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/LayoutRecoverPass"
        android:orientation="vertical">

        <!--EditText email-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/widgetEmailUser"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:errorEnabled="true">

            <EditText
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/emailRecoverPass"
                android:hint="@string/email_hint"
                android:layout_marginTop="16dp"
                android:textSize="16sp"/>
        </android.support.design.widget.TextInputLayout>

        <!--EditText senha-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/widgetPassUser"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/newPasswordRecover"
                android:layout_height="wrap_content"
                android:hint="@string/new_pass_hint"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:layout_marginTop="16dp"
                android:textSize="16sp"/>
        </android.support.design.widget.TextInputLayout>

        <!--Botao enviar-->
        <Button
            android:background="@drawable/shape_orangebuttom"
            android:text="@string/button_send_text"
            android:onClick="updateForgotPassword"
            android:layout_height="wrap_content"
            android:id="@+id/btnRecoverPassword"
            android:textColor="@color/white"
            android:layout_marginTop="16sp"
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:textStyle="bold"
            android:gravity="center"/>

        <!--Label resultado positivo-->
        <TextView
            android:textColor="@color/greenSuccessColor"
            android:text="@string/success_password_update"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/successMessage"
            android:layout_marginTop="30dp"
            android:visibility="invisible"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="15sp"/>
    </LinearLayout>
</RelativeLayout>
